--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "Apache-2.0 OR MIT"
 name = "vsss-rs"
 readme = "README.md"
 repository = "https://github.com/mikelodder7/vsss-rs"
-version = "2.1.2"
+version = "2.1.3"
 
 [features]
 default = ["secp256k1", "curve25519", "std"]
@@ -20,7 +20,7 @@ secp256k1 = ["k256", "elliptic-curve", "subtle"]
 std = ["alloc"]
 
 [dependencies]
-curve25519-dalek = { package = "tari-curve25519-dalek", version = "4.0.2", optional = true, default-features = false, features = ["serde", "alloc", "u64_backend"] }
+curve25519-dalek = { package = "tari-curve25519-dalek", version = "4.0.3", optional = true, default-features = false, features = ["serde", "alloc", "rand_core", "precomputed-tables"] }
 elliptic-curve = { version = "0.12", features = ["ecdh"], optional = true }
 ff = "0.12"
 group = "0.12"
@@ -28,24 +28,20 @@ k256 = { version = "0.11", features = ["arithmetic", "bits", "serde"], optional 
 rand_chacha = { version = "0.3", default-features = false }
 rand_core = "0.6"
 serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
-serde-big-array = "0.4"
 serde_cbor = { version = "0.11", optional = true }
-sha2 = { version = "0.10", default-features = false }
 sha2v9 = { version = "0.9", package = "sha2", default-features = false }
 subtle = { version = "2.4", optional = true }
 zeroize = { version = "1", features = ["zeroize_derive"] }
-rand_7 = { version = "0.7", package = "rand" }
-sha3 = { version = "0.9.1", default-features = false }
+rand = { version = "0.8", package = "rand" }
 thiserror = "1.0.26"
 
 [dev-dependencies]
 bls12_381_plus = "0.5.3"
-curve25519-dalek = { package = "tari-curve25519-dalek", version = "4.0.2", default-features = false, features = ["serde", "alloc", "u64_backend"] }
+curve25519-dalek = { package = "tari-curve25519-dalek", version = "4.0.3", default-features = false, features = ["serde", "alloc", "rand_core", "precomputed-tables"] }
 ed25519-dalek = "1.0"
 k256 = { version = "0.11.6", features = ["arithmetic", "bits"] }
 p256 = { version = "0.11.1", features = ["arithmetic", "bits"] }
-rand = "0.8"
-rand_7 = { version = "0.7", package = "rand" }
+rand = { version = "0.8", package = "rand" }
 rand_xorshift = "0.3"
 serde_json = "1.0"
 serde_cbor = "0.11"
