--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -8,7 +8,7 @@ imports_layout = "HorizontalVertical"
 imports_granularity = "Crate"
 match_block_trailing_comma = true
 max_width = 120
-newline_style = "Native"
+newline_style = "Auto"
 normalize_comments = true
 reorder_imports = true
 reorder_modules = true
